<resources>
    <string name="app_name">微创秀文</string>
    <string name="vip_info">会员资料</string>
    <string name="publish_article">发表文章</string>
    <string name="avail_balance">可提余额</string>
    <string name="commission_balance">已提余额</string>
    <string name="balance_total">总余额</string>
    <string name="required">*</string>
    <string name="basic_info">基本资料</string>
    <string name="banks_setting">银行设置</string>
    <string name="articles_list">文章列表</string>
    <string name="system_notice">系统公告</string>
    <string name="password_modify">修改密码</string>
    <string name="withdraw_password_modify">修改提现密码</string>
    <string name="withdraw_deposit">我要提现</string>
    <string name="vip_center">会员中心</string>
    <string name="add_bankcard">添加银行卡</string>
    <string name="type_old_pwd">&#160;输入旧密码</string>
    <string name="type_new_pwd">&#160;输入新密码</string>
    <string name="retype_new_pwd">&#160;重复新密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="attention">注意事项：</string>
    <string name="modify_pwd_attentions">1.请注意，如果重新设置密码后，请一定牢记新的密码，并建议您定期
        更新密码保证安全性 \n2.登录密码如不修改，请勿填写。\n3.如忘记密码，请联系客服为您重置密码。\n4
        .如果操作过程中遇到问题，请与客服联系。</string>

    <string name="register">注册</string>
    <string name="login">登录</string>

    <string name="register_username">请使用英文、数字、下划线6-10位字符</string>
    <string name="register_password">请输入6-16位字符</string>
    <string name="register_password2">请重复输入密码</string>
    <string name="register_userphone">请正确输入手机号码，提款将核实</string>
    <string name="register_userqq">请正确输入QQ号码，提款将核实</string>

    <string name="user_account">我的账号</string>
    <string name="user_nickname">我的昵称</string>
    <string name="contact_number">联系电话</string>
    <string name="user_qq">我的QQ</string>
    <string name="user_weixin">我的微信</string>
    <string name="secure_mailbox">安全邮箱</string>
    <string name="user_alipay">我的支付宝</string>
    <string name="myarticle">我的文章</string>
    <string name="cue_words">请输入您的银行卡号</string>
    <string name="nav_ui">首页</string>
    <string name="editor_title">请输入标题</string>
    <string name="titlenotnull">标题不能为空哦</string>
    <string name="lv_article_empty">快去发表您的文章吧</string>
    <string name="upload_content">上传内容</string>
    <string name="status">审核状态</string>
    <string name="notes">注意事项：</string>
    <string name="create_newArt">新建</string>
    <string name="article_detail">文章详情</string>
    <string name="depositBank">开户银行</string>
    <string name="save">保存</string>
    <string name="issue">发送</string>
    <string name="addImg">添加图片</string>
    <string name="newslist">新闻列表</string>
    <string name="send">发送</string>
    <string name="editorContent">正文</string>
    <string name="withdraw_amount">请输入提现金额(单笔金额50元起)</string>
    <string name="withdraw_pwd">请输入提现密码(默认是登录密码)</string>
    <string name="withdraw_deposit_attentions">1.每个账号每天有3次取款，单笔不少于50元，提现账号不正确的情况
        请及时联系我们的客服，提现密码默认是账号登录密码。\n2.提现时间:24小时，3-10分钟内到账，忙时不超过30分钟，
        若超过时间，请及时联系客服。\n3.偶尔提款高峰期会出现短时间的延时，但平台保证资金会一一到达客户银行账户。</string>
    <string name="matters_needing_attention">注意事项:</string>
    <string name="matters_needing_attention1">1.一个游戏账户最多绑定两张银行卡</string>
    <string name="matters_needing_attention2">2.银行卡信息完成后，已绑定的银行卡信息不能进行修改和删除</string>
    <string name="matters_needing_attention3">3.所绑定的银行卡必须在使用中</string>
    <string name="confirm_withdraw">确认提现</string>
    <string name="loading">请稍候</string>

    <string name="in_review">审核中</string>
    <string name="notpass">未通过</string>
    <string name="published">已通过</string>
    <string name="upload_success">上传成功</string>
    <string name="retry_letter">服务器开小差了，请稍后重试</string>
    <string name="clear">清空</string>

    <string name="recommend_article">优秀文章(默认)</string>
    <string name="recommend_video">推荐视频</string>
    <string name="contentnotbull">您还没有输入内容</string>
    <string name="please_fill_in">请确认您填写的是否有误</string>
    <string name="confirm_your_bans">请确定您的所属银行</string>
    <string name="please_choose_yourbank">请选择您的银行</string>

    <string name="back_password">找回密码</string>
    <string name="back_account">您登陆使用的账号</string>
    <string name="back_phone">您注册使用的手机号码</string>

    <string name="back_submit">确认提交</string>
    <string name="back_login">返回登录</string>
    <string name="title">标题</string>
    <string name="logout">退出登录</string>
    <string name="app_intro">关于我们</string>
    <string name="tell_test">验证手机</string>
    <string name="customer_service">在线客服</string>
    <string name="id">ID：</string>
    <string name="basic_info_attention">1.基本资料设置后无法修改，请务必真实填写，\n谨慎提交.</string>
    <string name="basic_info_attention2">2.如果操作过程中遇到问题，请与在线客服联系</string>

    <string name="back_pwd">可通过手机验证码找回密码</string>
    <string name="basic_info_bank_attention">银行资料设置后无法修改，请务必真实填写，\n谨慎提交.</string>
    <string name="statement_state">状态：</string>
    <string name="statement_pending">未处理</string>
    <string name="statement_success">成功</string>
    <string name="statement_fail">失败</string>
    <string name="account_statement">我的账单</string>
    <string name="video_list">视频列表</string>

    <!-- 权限申请-->
    <string name="tips_permission_request_title">Permission Request</string>
    <string name="tips_permission_request_content">need some permission to do what i can do</string>
    <string name="go_and_grant_permission">to settings and grant permission</string>
    <string name="deny_and_quit">quit</string>


    <!-- 压缩-->
    <string name="compress_load_library_succeed">load library success</string>
    <string name="compress_load_library_failed">load library failed,reason:%1$s</string>
    <string name="compress_succeed">compress success</string>
    <string name="compress_failed">compress failed, reason: %1$s</string>
    <string name="compress_progress">progress: %1$s</string>
    <string name="compree_please_input_command">please input command</string>

    <!-- 录制视频-->
    <string name="record_video">record video</string>
    <string name="run_compress_command">run compress command</string>
    <string name="no_video_tips">video file not found, please record first</string>
    <string name="fail_when_camera_try_autofocus">autofocus failed:%1$s</string>
    <string name="dont_have_camera_error">camera not found!</string>
    <string name="only_have_one_camera">camera cannot switch</string>
    <string name="video_captured">video captured</string>
    <string name="camera_init_fail">camera initialization failed</string>
    <string name="dont_have_front_camera">front camera not found</string>
    <string name="changing_flashLight_mode">flashlisht mode</string>
    <string name="open_video">open video</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="compress_result_input_output">input:%1$s,size:%2$s,output:%3$s,size:%4$s</string>
    <string name="path">video path:%1$s,size:%2$s</string>
    <string name="dont_have_app_to_open_file">cannot open file</string>

</resources>
