<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/x5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x37"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/required"
                android:textColor="@color/red"/>

            <android.support.design.widget.TextInputEditText
                android:layout_marginLeft="@dimen/x10"
                android:id="@+id/et_type_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x37"
                android:background="@null"
                android:hint="@string/type_old_pwd"
                android:inputType="textPassword"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#ababab"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x37"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/required"
                android:textColor="@color/red"/>

            <EditText
                android:layout_marginLeft="@dimen/x10"
                android:id="@+id/et_type_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x37"
                android:background="@null"
                android:hint="@string/type_new_pwd"
                android:inputType="textPassword"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#ababab"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x37"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/required"
                android:textColor="@color/red"/>

            <EditText
                android:layout_marginLeft="@dimen/x10"
                android:id="@+id/et_retype_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x37"
                android:background="@null"
                android:hint="@string/retype_new_pwd"
                android:inputType="textPassword"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#ababab"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x39"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginTop="@dimen/x20"
            android:background="@drawable/shape_modify_confirm_bg"
            android:text="@string/confirm_modify"
            android:textColor="@color/white"
            android:textSize="@dimen/x17"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x5"
            android:text="@string/attention"
            android:textColor="@color/red"
            android:textSize="@dimen/x20"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_pwd_attentions"
            android:textSize="@dimen/x13"/>


    </LinearLayout>


</layout>
