<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_corner_edittext"
    android:orientation="vertical"
    android:gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorGrey3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_pwd"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorGrey3"/>


            <EditText
                android:id="@+id/edittext_account"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/back_account"
                android:textColor="@color/colorBlack"
                android:drawablePadding="16dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/shape_corner_edittext"
                android:inputType="textWebEmailAddress"/>

            <EditText
                android:id="@+id/edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/shape_corner_edittext"
                android:paddingLeft="10dp"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/back_phone"
                android:drawablePadding="16dp"
                android:inputType="textWebEmailAddress"/>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/line1"
            android:text="@string/back_submit"
            android:textSize="18sp"
            android:textColor="#fff"
            android:background="@drawable/login_btn"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/line1"
            android:text="@string/back_login"
            android:textSize="18sp"
            android:textColor="#fff"
            android:background="@drawable/login_btn"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>
