<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layout1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:paddingLeft="10dp"
            android:background="@drawable/shape_corner_edittext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >

            <EditText
                android:id="@+id/edittext_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/back_account"
                android:drawablePadding="16dp"
                android:background="@null"
                android:inputType="textWebEmailAddress"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_layout2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:paddingLeft="10dp"
            android:background="@drawable/shape_corner_edittext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/back_phone"
                android:drawablePadding="16dp"
                android:background="@null"
                android:inputType="textWebEmailAddress"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/line1"
            android:text="@string/back_submit"
            android:textColor="#fff"
            android:background="@drawable/login_btn"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/line1"
            android:text="@string/back_login"
            android:textColor="#fff"
            android:background="@drawable/login_btn"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>
</layout>