<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.leon.article.api.bean.ArticleApiBean"/>

        <import type="android.view.View"/>

        <variable
            name="userdata"
            type="ArticleApiBean"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_layout0"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingLeft="10dp"
                >

                <EditText
                    android:id="@+id/edit_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/user_account"
                    android:inputType="textWebEmailAddress"
                    app:data="@{userdata.data.mname}"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#ababab"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_layout1"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:paddingLeft="10dp"
                >

                <EditText
                    android:id="@+id/edit_useraccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/user_nickname"
                    android:inputType="textWebEmailAddress"
                    app:data="@{userdata.data.nickname}"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#ababab"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_below="@+id/textinput_layout1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:paddingLeft="10dp">

                    <EditText
                        android:id="@+id/edit_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/contact_number"
                        android:inputType="phone"
                        app:data="@{userdata.data.mtell}"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_tell_test"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_modify_confirm_bg"
                    android:text="@string/tell_test"
                    android:textColor="@color/white"
                    android:visibility="@{userdata.data.tell_test}"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#ababab"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_layout3"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_below="@+id/textinput_layout2"
                android:paddingLeft="10dp">

                <EditText
                    android:id="@+id/edit_qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/user_qq"
                    android:inputType="textWebEmailAddress"
                    app:data="@{userdata.data.mqq}"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#ababab"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_layout4"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_below="@+id/textinput_layout3"
                android:paddingLeft="10dp">

                <EditText
                    android:id="@+id/edit_weixin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/user_weixin"
                    android:inputType="textWebEmailAddress"
                    app:data="@{userdata.data.weixin}"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#ababab"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_layout5"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_below="@+id/textinput_layout4"
                android:paddingLeft="10dp">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/secure_mailbox"
                    android:inputType="textWebEmailAddress"
                    app:data="@{userdata.data.email}"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#ababab"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_btn"
                android:text="确认修改"
                android:textColor="#fff"
                android:textSize="@dimen/x16"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/attention"
            android:textColor="@color/red"
            android:textSize="@dimen/x15"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="10dp"
            android:lineSpacingExtra="@dimen/x3"
            android:text="@string/basic_info_attention"
            android:textSize="@dimen/x13"/>

    </LinearLayout>

</layout>