<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.leon.article.Activity.art.ArticleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_back"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_myArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myarticle"
            android:textColor="#ffffff"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!--<TextView
            android:id="@+id/tv_createArt"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_newArt"
            android:textColor="#ffffff"
            android:textSize="18sp" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_vip" />

        <TextView
            android:id="@+id/tv_vipInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:text="@string/vip_info"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_createArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_article"
            android:textColor="@color/toolbar_back"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/icon_goto_article"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/goto_article" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:dividerHeight="1px">
    </ListView>

    <TextView
        android:id="@+id/lv_article_empty"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="25sp"
        android:text="@string/lv_article_empty"/>

</LinearLayout>